fix matplotlib (not working with QT5 atm)

--- a/compare_with_experiment.ipynb
+++ b/compare_with_experiment.ipynb
@@ -19,7 +19,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "%matplotlib qt5\n",
+    "%matplotlib inline\n",
     "from radis import calc_spectrum, Spectrum, plot_diff\n",
     "from astropy import units as u\n",
     "\n",
@@ -28,9 +28,10 @@
     "                  molecule='CO',\n",
     "                  isotope='1,2,3',\n",
     "                  pressure=1.01325 * u.bar,\n",
-    "                  Tgas=1000 * u.K,\n",
+    "                  Tgas=700 * u.K,\n",
     "                  mole_fraction=0.1,\n",
     "                  path_length=1 * u.cm\n",
+    "                  verbose=False\n",
     "                  )\n",
     "s.apply_slit(1, 'nm')\n",
     "s.plot('transmittance')\n",
