Fix typos in example.

--- a/compare_with_experiment.ipynb
+++ b/compare_with_experiment.ipynb
@@ -30,7 +30,7 @@
     "                  pressure=1.01325 * u.bar,\n",
     "                  Tgas=700 * u.K,\n",
     "                  mole_fraction=0.1,\n",
-    "                  path_length=1 * u.cm\n",
+    "                  path_length=1 * u.cm,\n",
     "                  verbose=False\n",
     "                  )\n",
     "s.apply_slit(1, 'nm')\n",
@@ -46,7 +46,7 @@
    "outputs": [],
    "source": [
     "# Import an experimental spectrum : \n",
-    "s_exp = Spectrum.from_file('my_experiment.txt', 'transmittance', Iunit='', waveunit='nm')        # or import with numpy and use Spectrum.from_array()"
+    "s_exp = Spectrum.from_txt('my_experiment.txt', 'transmittance', unit='', waveunit='nm')        # or import with numpy and use Spectrum.from_array()"
    ]
   },
   {
