--- a/welcome.ipynb
+++ b/welcome.ipynb
@@ -4,11 +4,11 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Welcome in RADIS-lab !\n",
+    "# Welcome to RADIS-lab !\n",
     "\n",
     "![](binder/radis_ico_dark.png)\n",
     "\n",
-    "This your online environment to compute spectra and post-process them. \n",
+    "This is your online environment to compute spectra and post-process them. \n",
     "\n",
     "It comes pre-installed with\n",
     "- a scientific Python environment\n",
