try with preconfiguring HITEMP CO2 (>> 2 GB RAM to setup). (related to #1)

--- a/welcome.ipynb
+++ b/welcome.ipynb
@@ -94,7 +94,7 @@
     "- [post-process-spectra](post-process-spectra.ipynb) : apply a slit, store, save to txt, crop, line-survey, etc. \n",
     "- [compare_with_experiment.ipynb](examples/compare_with_experiment.ipynb) : upload an experimental file and compare it to calculations. \n",
     "- [compare_CO_HITRAN_HITEMP.ipynb](examples/compare_CO_HITRAN_HITEMP.ipynb) : CO spectra calculated with HITRAN and HITEMP from 300 to 6000 K. \n",
-    "- [examples/co2-4080-4500nm/](examples/co2-4080-4500nm/co2-4080-4500.ipynb) : CO$_2$ spectrum compared with experiment, with line-of-sight absorption, and instrumental slit function. \n",
+    "- [co2-4080-4500nm.ipynb/](examples/co2-4080-4500nm/co2-4080-4500.ipynb) : CO$_2$ spectrum compared with experiment, with line-of-sight absorption, and instrumental slit function. \n",
     "\n",
     "Or :\n",
     "- start a new notebook from the Launcher, or start a new Terminal to install any extra package you need. \n",
