preconfigure H2O files preconfigure CO using the new fetch_databank('hitemp')

--- a/examples/compare_CO_HITRAN_HITEMP.ipynb
+++ b/examples/compare_CO_HITRAN_HITEMP.ipynb
@@ -176,7 +176,7 @@
     "# CO HITRAN\n",
     "s_tran = calc_spectrum(**conditions,\n",
     "                       Tgas=700, \n",
-    "                       databank='fetch',  # HITRAN automatically downloaded\n",
+    "                       databank='hitran',  # HITRAN automatically downloaded\n",
     "                       name=\"HITRAN\"\n",
     "                      )\n",
     "# without verbose=False this will show all the input parameters. \n",
@@ -271,7 +271,7 @@
     "# CO HITEMP\n",
     "s_temp = calc_spectrum(**conditions,\n",
     "                       Tgas=700, \n",
-    "                       databank='HITEMP2019-CO',  # HITRAN automatically downloaded\n",
+    "                       databank='hitemp',  # HITRAN automatically downloaded\n",
     "                       name=\"HITEMP2019\"\n",
     "                      )"
    ]
@@ -423,11 +423,11 @@
     "for Tgas in [300, 700, 1300, 2000, 3000, 4000, 5000, 6000]:\n",
     "    s_tran = calc_spectrum(**conditions,\n",
     "                           Tgas=Tgas, \n",
-    "                           databank='fetch',  # HITRAN automatically downloaded\n",
+    "                           databank='hitran',  # HITRAN automatically downloaded\n",
     "                           name=\"HITRAN\")\n",
     "    s_temp = calc_spectrum(**conditions,\n",
     "                           Tgas=Tgas, \n",
-    "                           databank=\"HITEMP2019-CO\",\n",
+    "                           databank=\"hitemp\",\n",
     "                           name=\"HITEMP2019\")\n",
     "    plot_diff(s_temp, s_tran, 'abscoeff', title=f\"{Tgas}K\")"
    ]
@@ -456,7 +456,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.11"
+   "version": "3.8.8"
   }
  },
  "nbformat": 4,
