fix references to radis.json

--- a/binder/about.ipynb
+++ b/binder/about.ipynb
@@ -30,7 +30,7 @@
     "\n",
     "## Custom Databases\n",
     "\n",
-    "RADIS-lab currently comes with some molecules of the HITEMP database, available in `~/databases` and already preconfigured in a RADIS Configuration file [~/.radis](../.radis)  *(read more about configuration files on the [online documentation](https://radis.readthedocs.io/en/latest/lbl/lbl.html#label-lbl-config-file))*\n",
+    "RADIS-lab currently comes with some molecules of the HITEMP database, available in `~/databases` and already preconfigured in a RADIS Configuration file [~/radis.json](../radis.json)  *(read more about configuration files on the [online documentation](https://radis.readthedocs.io/en/latest/lbl/lbl.html#label-lbl-config-file))*\n",
     "\n",
     "\n"
    ]
