--- a/examples/compare_CO_HITRAN_HITEMP.ipynb
+++ b/examples/compare_CO_HITRAN_HITEMP.ipynb
@@ -21,7 +21,7 @@
    "source": [
     "## Databases \n",
     "\n",
-    "The HITRAN database will be automatically downloaded. The HITEMP database files for CO have been preconfigured in the RADIS [~/.radis](../.radis) config file. You can see the list of preconfigured databases with `printDatabankList`: \n"
+    "The HITRAN database will be automatically downloaded. The HITEMP database files for CO have been preconfigured in the RADIS [~/radis.json](../radis.json) config file. You can see the list of preconfigured databases with `printDatabankList`: \n"
    ]
   },
   {
