fix typo in welcome add H2O example

--- a/welcome.ipynb
+++ b/welcome.ipynb
@@ -62,7 +62,7 @@
     "                  Tgas=700,           # K\n",
     "                  mole_fraction=0.1,\n",
     "                  path_length=1,      # cm\n",
-    "                  databank='hitran'   # or use 'hitemp'\n",
+    "                  databank='hitran',   # or use 'hitemp'\n",
     "                  verbose=False\n",
     "                  )\n",
     "s.plot()    # plot the radiance by default "
