--- a/examples/calculate_H2O_HITEMP.ipynb
+++ b/examples/calculate_H2O_HITEMP.ipynb
@@ -35,7 +35,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -54,7 +54,18 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\u001b[32mLDM algorithm used. Defaulting broadening method from <radis.misc.utils.Default object at 0x7f791e099790> to Voigt\u001b[0m\n",
+      "Downloading 01_02000-02250_HITEMP2010.zip for H2O (1/7).\n",
+      "Download complete. Parsing H2O database to /home/jovyan/.radisdb/hitemp/H2O-01_02000-02250_HITEMP2010.h5\n",
+      "(68s)\t5.5%\t  Parsed 1,300,000 / ~23,520,239 lines (estimate). Wavenumber range 2000.00-2094.44 cm-1 is complete."
+     ]
+    }
+   ],
    "source": [
     "from radis import calc_spectrum\n",
     "from astropy import units as u\n",
@@ -65,7 +76,6 @@
     "                  pressure = 1.01325 * u.bar,\n",
     "                  mole_fraction = 1,\n",
     "                  path_length = 1 * u.cm,\n",
-    "                  verbose=3,\n",
     "                  Tgas=3000, \n",
     "                  databank='hitemp',\n",
     "                  verbose=3,        # adding some extra info for the first computation\n",
@@ -92,7 +102,7 @@
  "metadata": {
   "celltoolbar": "Tags",
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -106,7 +116,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.8"
+   "version": "3.8.10"
   }
  },
  "nbformat": 4,
