--- a/welcome.ipynb
+++ b/welcome.ipynb
@@ -10,7 +10,7 @@
     "\n",
     "This is your online environment to compute spectra and post-process them. It comes pre-installed with\n",
     "- a scientific Python environment and the latest version of [the RADIS library](https://radis.github.io/).\n",
-    "- pre-configured databases, such as HITEMP CO and CO2 (look in `./databases`)\n",
+    "- pre-configured databases, such as HITEMP CO, CO2, H2O N2O, NO and NO2 !\n",
     "\n",
     "\n",
     "## Start computing spectra\n",
@@ -104,7 +104,7 @@
     "\n",
     "If using it to compute spectra with RADIS, properly cite the RADIS code. See how on the [online documentation](https://radis.readthedocs.io/en/latest/references/references.html#cite). \n",
     "\n",
-    "Also, make sure you cite the databases you use in your work (HITRAN / HITEMP). Citation keys can be found on the link above."
+    "Also, make sure you cite the databases you use in your work (HITRAN / HITEMP). Citation keys can be found on the link above, or generated from a computed spectrum using `s.cite()`."
    ]
   }
  ],
